--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -299,65 +299,73 @@
     " de maatgevende belasting combinatie voor het veld moment en steunpunt moment.\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "Wanneer je uit {doc}`../../design_workflow/general_mechanics/beams_with_multiple_supports` de rijen en kolommen verwijdert die niet nodig zijn voor de momenten in deze opdracht levert dat {numref}`veld_steun_momenten` op. Voor de momenten moeten de waardes in {numref}`veld_steun_momenten` vermenigvuldigt worden met $q*L^2$. Voor **X = 0** geldt $L = 5 \\ m$.\n",
+    "Wanneer je uit {doc}`../../design_workflow/general_mechanics/beams_with_multiple_supports` de rijen en kolommen verwijdert die niet nodig zijn voor de momenten in deze opdracht levert dat {numref}`veld_steun_momenten` op. Voor de momenten moeten de waardes in {numref}`veld_steun_momenten` vermenigvuldigt worden met $q*L^2$. Voor **X = 0** geldt $L = 5 \\ m$. De belastingfactoren $\\mathbf{1.1}$ voor $\\mathbf{q_{per}}$ en $\\mathbf{1.35}$ voor $\\mathbf{q_{ver}}$ worden in de uiteindelijke sommatie pas meegenomen en in eerste instantie weggelaten.\n",
     "\n",
     "```{table} Veld- en steunpuntsmomenten factoren\n",
     ":name: veld_steun_momenten\n",
-    "| Type | M(1) location rel. to 1* | M2     | M(2) location rel. to 2** | M3     | M(3) |\n",
-    "|------|---------------------------|--------|----------------------------|--------|------|\n",
-    "| j    | 0.0800                    | 0.4000 | -0.1000                    | 0.0250 | 0.5000|\n",
-    "| k    | 0.1013                    | 0.4500 | -0.0500                    | -0.0500|       |\n",
-    "| l    | -0.025                    |        | -0.0500                    | 0.0750 | 0.5000|\n",
-    "| m    | 0.0735                    | 0.3833 | -0.1167                    | 0.0535 | 0.5830|\n",
-    "| n    | 0.0939                    | 0.4333 | -0.0667                    | -0.0250|       |\n",
+    "| Type | M(1) | M2     | M(2) | M3     | M(3) |\n",
+    "|------|--------|--------|-----|--------|------|\n",
+    "| j    | 0.0800 | -0.1000                    | 0.0250 | -0.100  | 0.0800 |\n",
+    "| k    | 0.1013 | -0.0500                    | -0.0500| -0.0500 | 0.1013 |\n",
+    "| l    | -0.025 | -0.0500                    | 0.0750 | -0.0500 | |\n",
+    "| m    | 0.0735 | -0.1167                    | 0.0535 | -0.0333 | |\n",
+    "| n    | 0.0939 | -0.0667                    | -0.0250| 0.0167  | |\n",
     "```\n",
     "\n",
     "Voor de permanente belasting (type j), die bestaat uit het eigengewicht van de betonnnen ligger en de vloer geldt: $q = G_{betonligger,as,B} + G_{vloer,as,B} = 1.75 + 11.655 = 13.405 \\ kN/m$. Combinatie van de eerdere factor uit {numref}`veld_steun_momenten`, $L = 5 \\ m$ en q levert {numref}`momenten_permanent`.\n",
     "\n",
     "```{table} Veld- en steunpuntsmomenten permanente belasting\n",
     ":name: momenten_permanent\n",
-    "| Type | M(1) location rel. to 1* | M2     | M(2) location rel. to 2** | M3     | M(3) |\n",
+    "| Type | M(1) | M2     | M(2) | M3     | M(3) |\n",
     "|------|---------------------------|--------|----------------------------|--------|------|\n",
-    "| j    | 0.0800                    | 0.4000 | -0.1000                    | 0.0250 | 0.5000|\n",
+    "| j    | 26.81                   | -33.51 | 8.38                    | -33.51 | 26.81 |\n",
     "```\n",
     "\n",
     "Voor de variable belasting (types j t/m n), die bestaat uit het eigengewicht van de betonnnen ligger en de vloer geldt: $q = Q_{binnen,as,B} = 7.875 \\ kN/m$. Combinatie van de eerdere factor uit {numref}`veld_steun_momenten`, $L = 5 \\ m$ en q levert {numref}`momenten_veranderlijk`.\n",
     "\n",
     "```{table} Veld- en steunpuntsmomenten variabele belasting\n",
     ":name: momenten_veranderlijk\n",
-    "| Type | M(1) location rel. to 1* | M2     | M(2) location rel. to 2** | M3     | M(3) |\n",
-    "|------|---------------------------|--------|----------------------------|--------|------|\n",
-    "| j    | 0.0800                    | 0.4000 | -0.1000                    | 0.0250 | 0.5000|\n",
-    "| k    | 0.1013                    | 0.4500 | -0.0500                    | -0.0500|       |\n",
-    "| l    | -0.025                    |        | -0.0500                    | 0.0750 | 0.5000|\n",
-    "| m    | 0.0735                    | 0.3833 | -0.1167                    | 0.0535 | 0.5830|\n",
-    "| n    | 0.0939                    | 0.4333 | -0.0667                    | -0.0250|       |\n",
+    "| Type | M(1)   | M2      | M(2)    | M3      | M(3)    |\n",
+    "|------|--------|---------|---------|---------|---------|\n",
+    "| j    | 15.750 | -19.688 | 4.922   | -19.688 | 15.750  |\n",
+    "| k    | 19.943 | -9.844  | -9.844  | -9.844  | 19.943  |\n",
+    "| l    | -4.922 | -9.844  | 14.766  | -9.844  | 0.000   |\n",
+    "| m    | 14.470 | -22.975 | 10.533  | -6.556  | 0.000   |\n",
+    "| n    | 18.487 | -13.132 | -4.922  | 3.288   | 0.000   |\n",
     "```\n",
     "\n",
-    "Sommatie van de permanente belasting type j met de verscheide types voor de veranderlijke belasting levert de momenten in {numref}`sommatie`. In deze sommatie slaat het type belastingcombinatie terug op de veranderlijke belasting, gezien de permanente belasting altijd j is.\n",
+    "Sommatie van de permanente belasting type j met de verscheide types voor de veranderlijke belasting levert de momenten in {numref}`sommatie`. In deze sommatie slaat het type belastingcombinatie terug op de veranderlijke belasting, gezien de permanente belasting altijd j is. De belastingfactoren $\\mathbf{1.1}$ voor $\\mathbf{q_{per}}$ en $\\mathbf{1.35}$ voor $\\mathbf{q_{ver}}$ worden nu meegenomen.\n",
     "\n",
     "```{table} Veld- en steunpuntsmomenten\n",
     ":name: sommatie\n",
-    "| Type | M(1) location rel. to 1* | M2     | M(2) location rel. to 2** | M3     | M(3) |\n",
-    "|------|---------------------------|--------|----------------------------|--------|------|\n",
-    "| j    | 0.0800                    | 0.4000 | -0.1000                    | 0.0250 | 0.5000|\n",
-    "| k    | 0.1013                    | 0.4500 | -0.0500                    | -0.0500|       |\n",
-    "| l    | -0.025                    |        | -0.0500                    | 0.0750 | 0.5000|\n",
-    "| m    | 0.0735                    | 0.3833 | -0.1167                    | 0.0535 | 0.5830|\n",
-    "| n    | 0.0939                    | 0.4333 | -0.0667                    | -0.0250|       |\n",
+    "| Type | M(1)   | M2      | M(2)    | M3      | M(3)    |\n",
+    "|------|--------|---------|---------|---------|---------|\n",
+    "| j    | 50.754 | -63.442 | 15.860  | -63.442 | 50.754  |\n",
+    "| k    | 56.415 | -50.153 | -4.073  | -50.153 | 56.415  |\n",
+    "| l    | 22.846 | -50.153 | 29.150  | -50.153 | 29.491  |\n",
+    "| m    | 49.026 | -67.880 | 23.435  | -45.714 | 29.491  |\n",
+    "| n    | 54.448 | -54.591 | 2.571   | -32.425 | 29.491  |\n",
     "```\n",
     "`````\n",
     "\n",
     "(iii) Bereken de maximale momenten.\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "$\\textcolor{red}{Uitwerking}$\n",
+    "Uit de {numref}`sommatie` volgen de maximale waardes:  \n",
+    "$\\mathbf{Maximale \\ veldmoment = 56.41 \\ kNm}$ voor $\\mathbf{combinatie \\ k}$  \n",
+    "$\\mathbf{Maximale \\ steunpuntsmoment = -67.88 \\ kNm}$ voor $\\mathbf{combinatie \\ m}$\n",
     "`````\n",
     "\n",
     "(iv) Teken de momentenlijn voor het maximale veld moment en de momentenlijn voor het maximale steunpunt moment.\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "$\\textcolor{red}{Uitwerking}$\n",
+    "De momenten zijn getekend in {numref}`schetsen_momentenlijnen`.\n",
+    "```{figure} Images/schetsen_momenten.jpg\n",
+    "---\n",
+    "name: schetsen_momentenlijnen\n",
+    "---\n",
+    "Schetsen momentenlijnen\n",
+    "```\n",
     "`````\n",
     "\n",
     "$\\mathbf{\\text{Vraag i}}$  \n",
