beams multiple support table fix + answers h i and hii partly

--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -370,7 +370,7 @@
     "\n",
     "$\\mathbf{\\text{Vraag i}}$  \n",
     "Geef voor de betonnen kolom op de kruising van as B en as 2 de maatgevende belasting combinatie voor de maximale drukkracht. Gebruik {numref}`gegevens_i`. Daarnaast zijn de volgende lasten van belang:\n",
-    "- $\\textbf{EG Beton Kolom [kN/m]}$: Bepaald in opdracht c\n",
+    "- $\\textbf{EG Beton Kolom [kN/m]}$: Bepaald in opdracht d\n",
     "- $\\textbf{Permanente Vloerbelasting [kN]}$: Gebruik Quick Reference om reactie kracht te bepaling van ligger opdracht h\n",
     "- $\\textbf{Veranderlijke Vloerbelasting [kN]}$: Gebruik Quick Reference om reactie kracht te bepaling van ligger opdracht h\n",
     "\n",
@@ -390,13 +390,31 @@
     "(i) Teken belasting op het constructie schema\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "$\\textcolor{red}{Uitwerking}$\n",
+    "De 6 belastingen zijn getekend in {numref}`6_belastingen`.\n",
+    "```{figure} Images/6_belastingen.png\n",
+    "---\n",
+    "name: 6_belastingen\n",
+    "---\n",
+    "6 belastingen\n",
+    "```\n",
     "`````\n",
     "\n",
     "(i) Bereken de $\\textbf{maatgevende drukkracht}$ \n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "$\\textcolor{red}{Uitwerking}$\n",
+    "De drukkracht bestaat uit een sommatie van verschillende krachten icm belastingfactoren±\n",
+    "- **Stalen kolom eigen gewicht**  \n",
+    "$Q_{stalen,kolom} = h * q_{stalen,kolom} = 3 * 0.60 = 1.80 \\ kN$\n",
+    "- **Permanente dakbelasting**  \n",
+    "Gegeven: $Q_{[per,dak]} = 13.79 \\ kN$\n",
+    "- **Veranderlijke dakbelasting**  \n",
+    "Gegeven: $Q_{[ver,dak]} = 20.78 \\ kN$\n",
+    "- **Eigen gewicht beton kolom**  \n",
+    "$Q_{beton,kolom} = h * q_{beton,kolom} = 4 * 0.5625 = 2.25 \\ kN$\n",
+    "- **Permanente vloerbelasting**  \n",
+    "\n",
+    "- **Veranderlijke vloerbelasting**  \n",
+    "\n",
     "`````\n",
     "\n",
     "(i) Teken de N-lijn\n",
