--- a/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
+++ b/book/design_workflow/general_mechanics/beams_with_multiple_supports.ipynb
@@ -70,8 +70,8 @@
     "---\n",
     "```\n",
     "\n",
-    "| Type | M(1) location rel. to 1* | M2     | M(2) location rel. to 2** | M3     | M(3) | R1     | R2     | R3     | R4     |\n",
-    "|------|---------------------------|--------|----------------------------|--------|------|--------|--------|--------|--------|\n",
+    "| Type | M(1) | location rel. to 1* | M2     | M(2) | location rel. to 2** | M3     | M(3) | R1     | R2     | R3     | R4     |\n",
+    "|------|----------------|-----------|--------|-----------------|-----------|--------|------|--------|--------|--------|--------|\n",
     "| h    | 0.0703                    | 0.3750 | -0.1250                    | 0.0703 | 0.6250||| 0.3750 | 1.2500 | 0.3750 |        |\n",
     "| i    | 0.0957                    | 0.4375 | -0.0625                    | -0.0313| ||      | 0.4375 | 0.6250 | -0.0625|        |\n",
     "| j    | 0.0800                    | 0.4000 | -0.1000                    | 0.0250 | 0.5000| -0.1000| 0.0800 | 0.4000 | 1.1000 | 1.1000 | 0.4000 |\n",
