--- a/book/calculation_examples/safety/CS_23_24_safety.ipynb
+++ b/book/calculation_examples/safety/CS_23_24_safety.ipynb
@@ -387,7 +387,7 @@
     "\n",
     "In het geval van de uitwerking geldt **X = 0, dus EG Stalen Kolom = 0.60 [kN/m], Permanente Dakbelasting = 13.79 [kN] en Veranderlijke Dakbelasting = 20.78 [kN]**.\n",
     "\n",
-    "(i) Teken belasting op het constructie schema\n",
+    "(i) Teken belasting op de constructie schema's per individuele belasting\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
     "De 6 belastingen zijn getekend in {numref}`6_belastingen`.\n",
@@ -399,28 +399,59 @@
     "```\n",
     "`````\n",
     "\n",
-    "(i) Bereken de $\\textbf{maatgevende drukkracht}$ \n",
+    "(ii) Bereken de $\\textbf{maatgevende drukkracht}$ \n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "De drukkracht bestaat uit een sommatie van verschillende krachten icm belastingfactoren±\n",
+    "De drukkracht bestaat uit een sommatie van verschillende krachten icm belastingfactoren:\n",
     "- **Stalen kolom eigen gewicht**  \n",
-    "$Q_{stalen,kolom} = h * q_{stalen,kolom} = 3 * 0.60 = 1.80 \\ kN$\n",
+    "$R_{stalen,kolom} = h * q_{stalen,kolom} = 3 * 0.60 = 1.80 \\ kN$\n",
     "- **Permanente dakbelasting**  \n",
-    "Gegeven: $Q_{[per,dak]} = 13.79 \\ kN$\n",
+    "Gegeven: $R_{per,dak} = 13.79 \\ kN$\n",
     "- **Veranderlijke dakbelasting**  \n",
-    "Gegeven: $Q_{[ver,dak]} = 20.78 \\ kN$\n",
+    "Gegeven: $R_{ver,dak} = 20.78 \\ kN$\n",
     "- **Eigen gewicht beton kolom**  \n",
-    "$Q_{beton,kolom} = h * q_{beton,kolom} = 4 * 0.5625 = 2.25 \\ kN$\n",
-    "- **Permanente vloerbelasting**  \n",
-    "\n",
+    "$R_{beton,kolom} = h * q_{beton,kolom} = 4 * 0.5625 = 2.25 \\ kN$\n",
+    "- **Permanente vloerbelasting** \n",
+    "Uit {doc}`../../design_workflow/general_mechanics/beams_with_multiple_supports` is de relevante informatie die van R2 (oplegreactie 2), gezien het om as B2 gaat (zie {numref}`figuur1`). Deze factoren die nodig zijn, zijn opgeslagen in {numref}`reactiekrachten`. Deze factor moet vermenigvuldigd worden met $q*L$.\n",
+    "```{table} Reactiekrachten beton ligger\n",
+    ":name: reactiekrachten\n",
+    "| Type | R2     |\n",
+    "|------|--------|\n",
+    "| j    | 1.1000 |\n",
+    "| k    | 0.5500 |\n",
+    "| l    | 0.5500 |\n",
+    "| m    | 1.2001 |\n",
+    "| n    | 0.6501 |\n",
+    "```\n",
+    "Gezien het om een permanente belasting gaat is slechts type j relevant. Eerder was al vastgesteld $q = 13.405 \\ kN/m$. Dus de reactiekracht van de permanente vloerbelasting is:\n",
+    "$R_{per,vloer} = factor * q * L = 1.1 * 13.405 * 5 = 73.7275 \\ kN.\n",
     "- **Veranderlijke vloerbelasting**  \n",
+    "Gezien het om een variable belasting gaat is slechts de grootste, type m, relevant. Eerder was al vastgesteld $q = 7.875 \\ kN/m$. Dus de reactiekracht van de permanente vloerbelasting is:\n",
+    "$R_{ver,vloer} = factor * q * L = 1.2001 * 7.875 * 5 = 47.254 \\ kN.\n",
     "\n",
+    "De belastingfactoren $\\mathbf{1.1}$ voor $\\mathbf{q_{per}}$ en $\\mathbf{1.35}$ voor $\\mathbf{q_{ver}}$ worden nu meegenomen. Dit levert de volgende reactiekracht op boven aan de kolom:\n",
+    "$R_{tot,boven} = 1.1*q_{per} + 1.35*q_{ver}$\n",
+    "$= 1.1*(R_{stalen,kolom} + R_{per,dak} + R_{per,vloer}) + 1.35*(R_{ver,vloer})$\n",
+    "$= 1.1*(1.80 + 13.79 + 73.7275) + 1.35*(47.254) = 162.04 \\ kN$\n",
+    "```{Note}\n",
+    "De veranderelijke dakbelasting valt weg, gezien de veranderlijke vloerbelasting groter is en dus karakteristiek wordt genomen!\n",
+    "````\n",
+    "\n",
+    "Onder aan de kolom komt de belasting van het eigengewicht van de kolom erbij:\n",
+    "$R_{tot,beneden} = R_{tot,boven} + 1.1*R_{beton,kolom}$\n",
+    "$= 162.04 + 1.1*2.25 = 164.52 \\ kN$\n",
     "`````\n",
     "\n",
-    "(i) Teken de N-lijn\n",
+    "(iii) Teken de N-lijn\n",
     "`````{admonition} Uitwerking\n",
     ":class: tip, dropdown\n",
-    "$\\textcolor{red}{Uitwerking}$\n",
+    "Met behulp van de waardes uit deelvraag (ii) kan de N-lijn worden getekend in {numref}`n_lijn`.\n",
+    "```{figure} Images/n_lijn.jpg\n",
+    "---\n",
+    "name: n_lijn\n",
+    "---\n",
+    "N-lijn\n",
+    "```\n",
     "`````\n",
     ":::"
    ]
