changes - to to

--- a/book/basics/general_materials.ipynb
+++ b/book/basics/general_materials.ipynb
@@ -45,9 +45,9 @@
     "\n",
     "| Material | CO2 Emissions (kg CO2e per ton) | Energy Consumption (MJ per ton) | Other Environmental Impacts |\n",
     "|----------|---------------------------------|-------------------------------|-----------------------------|\n",
-    "| Concrete | 100-200                         | 1,200-1,600                   | High water usage, resource extraction   |\n",
-    "| Steel    | 1,800-2,000                     | 20,000-35,000                 | Habitat destruction, pollution from mining   |\n",
-    "| Timber   | -600 to -1,200 (carbon storage) | 500-1,000                     | Deforestation if not sustainably sourced   |\n",
+    "| Concrete | 100 to 200                         | 1,200 to 1,600                   | High water usage, resource extraction   |\n",
+    "| Steel    | 1,800 to 2,000                     | 20,000 to 35,000                 | Habitat destruction, pollution from mining   |\n",
+    "| Timber   | -600 to -1,200 (carbon storage) | 500 to 1,000                     | Deforestation if not sustainably sourced   |\n",
     "\n",
     "### Life Cycle Assessment (LCA)\n",
     "\n",
