--- a/book/basics/general_materials.ipynb
+++ b/book/basics/general_materials.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "## Environmental Costs and Emissions of Building Materials\n",
     "\n",
-    "When selecting building materials, it is essential to consider their environmental impacts. Below is a comparison of the environmental costs and emissions associated with concrete, steel, and timber.\n",
+    "When selecting building materials, it is essential to consider their environmental impacts. Below is a comparison of the environmental costs and emissions associated with concrete [^1], steel [^2], and timber [^4].\n",
     "\n",
     "| Material | CO2 Emissions (kg CO2e per ton) | Energy Consumption (MJ per ton) | Other Environmental Impacts |\n",
     "|----------|---------------------------------|-------------------------------|-----------------------------|\n",
@@ -49,9 +49,9 @@
     "| Steel    | 1,800-2,000                     | 20,000-35,000                 | Habitat destruction, pollution from mining   |\n",
     "| Timber   | -600 to -1,200 (carbon storage) | 500-1,000                     | Deforestation if not sustainably sourced   |\n",
     "\n",
-    "### Life Cycle Assessment (LCA)\n",
+    "### Life Cycle Assessment (LCA) \n",
     "\n",
-    "Life Cycle Assessment (LCA) is a comprehensive method used to evaluate the environmental impacts of a product, process, or service throughout its entire life cycle. This methodology takes into account every stage from raw material extraction through production, use, and disposal or recycling. The primary goal of LCA is to identify and quantify the environmental burdens and impacts associated with these stages, providing a thorough understanding of the overall environmental performance.\n",
+    "Life Cycle Assessment (LCA) is a comprehensive method used to evaluate the environmental impacts of a product, process, or service throughout its entire life cycle [^5], [^6]. This methodology takes into account every stage from raw material extraction through production, use, and disposal or recycling. The primary goal of LCA is to identify and quantify the environmental burdens and impacts associated with these stages, providing a thorough understanding of the overall environmental performance.\n",
     "\n",
     "#### Key Stages of LCA\n",
     "\n",
@@ -65,7 +65,7 @@
     "\n",
     "#### LCA Categories\n",
     "\n",
-    "LCA considers several environmental impact categories to provide a holistic view of a product’s environmental performance:\n",
+    "LCA considers several environmental impact categories [^7] to provide a holistic view of a product’s environmental performance:\n",
     "\n",
     "- **Global Warming Potential (GWP)**: Measures the potential contribution to climate change by greenhouse gases, expressed as kg CO2 equivalent.\n",
     "- **Energy Consumption**: Total energy used during the life cycle, usually measured in megajoules (MJ).\n",
@@ -76,9 +76,9 @@
     "- **Ecotoxicity Potential**: Evaluates the potential harm to ecosystems from toxic substances, expressed as kg 1,4-DCB equivalent.\n",
     "- **Resource Depletion**: Measures the use of non-renewable resources, typically expressed in terms of kg Sb (antimony) equivalent or other resource metrics.\n",
     "\n",
-    "#### Applications of LCA\n",
+    "#### Applications of LCA \n",
     "\n",
-    "LCA is widely used across various industries and sectors for several purposes:\n",
+    "LCA is widely used across various industries and sectors for several purposes [^3]:\n",
     "\n",
     "- **Product Development and Improvement**: Helps in designing products with lower environmental impacts.\n",
     "- **Policy Making**: Informs regulations and standards for sustainable practices.\n",
@@ -108,17 +108,6 @@
     "### Summary\n",
     "\n",
     "Each building material has its own set of environmental impacts. Concrete and steel are associated with high CO2 emissions and energy consumption, whereas timber can act as a carbon sink but requires careful management to prevent deforestation. Sustainable practices and innovative technologies can help mitigate some of these environmental impacts.\n",
-    "\n",
-    "### Sources\n",
-    "\n",
-    "1. Hammond, G., & Jones, C. (2008). Inventory of Carbon & Energy (ICE) Version 1.6a. Sustainable Energy Research Team (SERT), University of Bath.\n",
-    "2. World Steel Association. (2021). Sustainable Steel: Indicators 2021 and steel’s contribution to a low carbon future.\n",
-    "3. International Energy Agency. (2020). Iron and Steel Technology Roadmap.\n",
-    "4. Forest Stewardship Council (FSC). (2021). Benefits of FSC Certification.\n",
-    "5. Habert, G., & Ouellet-Plamondon, C. (2016). Recent\n",
-    "6. International Organization for Standardization (ISO). (2006). ISO 14040: Environmental management - Life cycle assessment - Principles and framework.\n",
-    "7. Guinée, J. B. (2002). Handbook on Life Cycle Assessment: Operational Guide to the ISO Standards. Springer.\n",
-    "8. European Commission - Joint Research Centre - Institute for Environment and Sustainability. (2010). International Reference Life Cycle Data System (ILCD) Handbook: General guide for Life Cycle Assessment - Detailed guidance.\n",
     "\n",
     "## Comparison of Steel, Timber, and Concrete Structures in Terms of Costs per Square Meter\n",
     "\n",
@@ -188,7 +177,15 @@
     "| **Concrete**| 30 - 120               | 25 - 60             | 1 - 3                              | 56 - 183           |\n",
     "\n",
     "### Conclusion\n",
-    "Each material has its own advantages and cost implications. Steel structures tend to be more expensive due to higher material and labor costs but offer high strength and durability. Timber structures are generally more cost-effective and environmentally friendly but require careful maintenance. Concrete structures strike a balance between cost, durability, and maintenance needs. The choice of material should align with the specific requirements and budget constraints of the project.\n"
+    "Each material has its own advantages and cost implications. Steel structures tend to be more expensive due to higher material and labor costs but offer high strength and durability. Timber structures are generally more cost-effective and environmentally friendly but require careful maintenance. Concrete structures strike a balance between cost, durability, and maintenance needs. The choice of material should align with the specific requirements and budget constraints of the project.\n",
+    "\n",
+    "[^1]: Hammond, G., & Jones, C. (2008). Inventory of Carbon & Energy (ICE) Version 1.6a. Sustainable Energy Research Team (SERT), University of Bath.\n",
+    "[^2]: World Steel Association. (2021). Sustainable Steel: Indicators 2021 and steel’s contribution to a low carbon future.\n",
+    "[^3]: International Energy Agency. (2020). Iron and Steel Technology Roadmap.\n",
+    "[^4]: Forest Stewardship Council (FSC). (2021). Benefits of FSC Certification.\n",
+    "[^5]: International Organization for Standardization (ISO). (2006). ISO 14040: Environmental management - Life cycle assessment - Principles and framework.\n",
+    "[^6]: Guinée, J. B. (2002). Handbook on Life Cycle Assessment: Operational Guide to the ISO Standards. Springer.\n",
+    "[^7]: European Commission - Joint Research Centre - Institute for Environment and Sustainability. (2010). International Reference Life Cycle Data System (ILCD) Handbook: General guide for Life Cycle Assessment - Detailed guidance."
    ]
   },
   {
