--- a/book/design/steel/connections_matrix.ipynb
+++ b/book/design/steel/connections_matrix.ipynb
@@ -14,7 +14,11 @@
     "This matrix gives an overview of the different possibilities to connect steel members. The connections are placed in order of stiffness of the joint. This matrix only gives an impression of the possible stiffness of the joint. After designing the connection, always check whether the connection behaves as assumed in the determination of the force distribution.\n",
     "\n",
     "```{figure} Images/Connections_Matrix.jpg\n",
-    "```"
+    "```\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <iframe src=\"../../_static/Connection_Steel.html\" width=\"750\" height=\"300\" frameborder=\"0\"></iframe>\n",
+    "</div>"
    ]
   }
  ],
