--- a/book/design/timber/connection_elements.ipynb
+++ b/book/design/timber/connection_elements.ipynb
@@ -90,7 +90,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<div style=\"text-align: center;\">\n",
+    "    <iframe src=\"../../_static/Connection_Timber.html\" width=\"750\" height=\"300\" frameborder=\"0\"></iframe>\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
