--- a/book/design/concrete/hollow_core_slabs.ipynb
+++ b/book/design/concrete/hollow_core_slabs.ipynb
@@ -146,6 +146,10 @@
     "```{figure} Images/HollowCoreConnections.jpg\n",
     "```\n",
     "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <iframe src=\"../../_static/Connection_Concrete.html\" width=\"750\" height=\"300\" frameborder=\"0\"></iframe>\n",
+    "</div>\n",
+    "\n",
     "## Product specifications VBI isolation slabfloor A320\n",
     "\n",
     "| Property                      | Value                           |\n",
